# chatbot

./: .gitignore  README.md  amplify.yml  db.sqlite3  manage.py  pyproject.toml  requirements.txt
chatbot_project/: settings.py  urls.py  wsgi.py
megbot/: apps.py  urls.py  views.py
megbot/migrations/: 0001_initial.py  0002_delete_apisettings.py
megbot/static/megbot/css/: styles.css
megbot/static/megbot/js/: script.js
megbot/static/megbot/js/features/: chat.js  settings.js  sidebar.js  voice.js
megbot/static/megbot/js/models/: chat-model.js  user-prefs.js
megbot/static/megbot/js/utils/: api.js  dom.js  formatters.js  storage.js
megbot/templates/megbot/: chat.html  welcome.html
